Update API Documentation
