# app/Http/Controllers/API/Admin/UserController.php
@@ -24,7 +24,40 @@ class UserController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *     path="/api/v1/admin/create",
+     *     tags={"Admin"},
+     *     summary="Create an Admin Account",
+     *     @OA\RequestBody(
+     *       @OA\JsonContent(),
+     *       @OA\MediaType(
+     *           mediaType="application/x-www-form-urlencoded",
+     *           @OA\Schema(
+     *               type="object",
+     *               required={"first_name", "last_name", "email", "password",
+     *               "password_confirmation", "phone_number", "address"},
+     *               @OA\Property(property="first_name", type="string", description="User firstname", example="Admin"),
+     *               @OA\Property(property="last_name", type="string", description="User lastname", example="Admin"),
+     *               @OA\Property(property="email", type="string",
+     *               format="email", description="User email", example="admin@email.com"),
+     *               @OA\Property(property="password", type="string", example="secret123", description="User password"),
+     *               @OA\Property(property="password_confirmation", example="secret123", description="User password"),
+     *               @OA\Property(property="avatar", type="string", description="Avatar image UUID", example=""),
+     *               @OA\Property(property="address", type="string",
+     *               description="User main address", example="Accra, Ghana"),
+     *               @OA\Property(property="phone_number", type="string",
+     *               description="User main phone number", example="+233244112444"),
+     *               @OA\Property(property="is_marketing", type="string",
+     *               description="User marketing preferences", example=""),
+     *           ),
+     *       ),
+     *     ),
+     *     @OA\Response(response="201", description="OK", @OA\JsonContent(),),
+     *     @OA\Response(response="401", description="Unauthorized", @OA\JsonContent(),),
+     *     @OA\Response(response="404", description="Page Not Found", @OA\JsonContent(),),
+     *     @OA\Response(response="422", description="Unprocessable Entity", @OA\JsonContent(),),
+     *     @OA\Response(response="500", description="Internal server error", @OA\JsonContent(),)
+     * )
      */
     public function store(StoreUserRequest $request)
     {
